--- a/JScriptSVG/BinaryA/www/style.css
+++ b/JScriptSVG/BinaryA/www/style.css
@@ -6,6 +6,15 @@ html,body {
 	width:100%;
 }
 
+a:link { 
+	outline: none; 
+	text-decoration: none; 
+	color:#9EBA9D; 
+}
+a:visited { 
+	color:#9EBA9D; 
+}
+
 .visualbyte {
 	/*clear:left;*/
 	height:480px;
